SSC-1389 fix css menu on tablet

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-quote-request.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-quote-request.less
@@ -1,7 +1,6 @@
 .c-quote-request {
     text-transform: uppercase;
     display: table;
-    float: right;
     padding: 10px;
     height: @nav-top-height;
     border-left: 0px;
